# reflectorch

./: .dockerignore  .gitignore  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  d1.yaml  debug.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  triton_singularity
configs/: a_base_point_neutron_conv_standard.yaml  a_base_point_xray_conv_absorption.yaml  a_base_point_xray_conv_standard.yaml  b_mc_point_neutron_conv_standard_L1_InputDq.yaml  b_mc_point_neutron_conv_standard_L1_InputQDq.yaml  b_mc_point_neutron_conv_standard_L1_comp.yaml  b_mc_point_neutron_conv_standard_L2_InputDq.yaml  b_mc_point_neutron_conv_standard_L2_InputQDq.yaml  b_mc_point_neutron_conv_standard_L2_comp.yaml  b_mc_point_neutron_conv_standard_L3_InputDq.yaml  b_mc_point_neutron_conv_standard_L3_InputQDq.yaml  b_mc_point_neutron_conv_standard_L3_comp.yaml  b_mc_point_neutron_conv_standard_L4_comp.yaml  b_mc_point_neutron_conv_standard_L5_comp.yaml  b_mc_point_xray_conv_standard_L2_InputQ.yaml  c1.yaml  c1_trained.yaml  c_L10_d100_s150_r30_ws5_q03_nq256.yaml  c_L3_d200_s150_r60_ws5_q03_nq128.yaml  c_L5_d200_s150_r60_ws5_q03_nq256.yaml  c_absorption.yaml  c_absorption_L2_d500_s150_is30_r60_ws5_q03_nq256.yaml  c_absorption_L5_d200_s150_is30_r60_ws5_q03_nq256.yaml  c_ae.yaml  c_fno.yaml  c_model_with_shifts.yaml  c_repeating_multilayer.yaml  c_repeating_multilayer_trained1.yaml  e_mc_point_neutron_conv_standard_L1_InputQDq_n128_size1024.yaml  e_mc_point_neutron_conv_standard_L1_InputQDq_n256_size1024.yaml  l2q109_exp_1.yaml  l2q128_new_sub_1.yaml  l2q256_absorption_1.yaml  l2q256_absorption_1_new.yaml  l2q256_exp_2.yaml  l2q256_exp_3.yaml  l2q256_exp_3_02.yaml  l2q256_exp_4.yaml  l2q256_exp_5.yaml  l2q256_exp_sm_2.yaml  (+134 more)
docs/: .buildinfo  _config.yml  (+20 more)
(+199 files in other folders)
